# genvm-linter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: genvm-lint.md  publish.md
.github/workflows/: e2e-housekeeper.yml  e2e.yml  publish.yml  sync-docs.yml  tests.yml
config/: versions.yaml
docs/: BRANCHING.md  VERSION_RULES.md
examples/: versioned_contracts.py
src/genvm_linter/: __init__.py  cli.py  linter.py  output.py  rule_registry.py  stubs.py  version.py
src/genvm_linter/lint/: __init__.py  ast_utils.py  linter.py  safety.py  structure.py
src/genvm_linter/rules/: __init__.py  contract.py  genvm_dataclasses.py  genvm_patterns.py  python_types.py  types.py  versioned.py
src/genvm_linter/validate/: artifacts.py  sdk_loader.py  validator.py
tests/: test_artifacts.py  test_contract_detection.py  test_sdk_loader.py  test_semantic_rules.py
tests/integration/: test_version_specific_test_rules.py  test_versioned_rules.py
tests/unit/: test_version.py
