[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genvm-linter"
version = "0.4.0"
description = "Fast validation and schema extraction for GenLayer intelligent contracts"
readme = "README.md"
license = "MIT"
authors = [
    { name = "GenLayer Labs", email = "dev@genlayer.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["genvm", "genlayer", "linter", "blockchain", "smart-contracts", "validation"]
dependencies = [
    "click>=8.0",
    "numpy>=1.20",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
genvm-lint = "genvm_linter.cli:cli"

[project.urls]
Homepage = "https://github.com/genlayerlabs/genvm-linter"
Repository = "https://github.com/genlayerlabs/genvm-linter"
Issues = "https://github.com/genlayerlabs/genvm-linter/issues"
Documentation = "https://docs.genlayer.com/developers/intelligent-contracts/tooling-setup"

[tool.hatch.build.targets.wheel]
packages = ["src/genvm_linter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]